Server.js created and linked to Recommendations

--- a/HTML/Recommendations.html
+++ b/HTML/Recommendations.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-
+<script src="./server.js"></script>
     <div class="container" id="container">
-        <div> IMAGE BANNER </div>
+        <div>IMAGE BANNER</div>
         <div>SEARCH BAR</div>
         <div>REC IMG 1</div>
         <div>REC IMG 2</div>
