Getting close to finishing log-in screen CSS

--- a/HTML/Login-Form.html
+++ b/HTML/Login-Form.html
@@ -27,8 +27,7 @@
                 <input type="username" class="username" placeholder="Username" />
                 <input type="password" class="password" placeholder="Password" />
                 <br>
-                <label for="remember">Remember me?</label>
-                <input type="checkbox" class="remember" name="remember" value="Remember">
+                <p class="remember">Remember me? <input type="checkbox" name="remember" value="Remember"></p>
                 <p class="forgotten-password">Forgot your Username and/or<br> Password? <a href="#" style="color: white"><u>Click Here.</u></a></p>
 
                 <button class="login-button2">Login</button>
