--- a/HTML/Map.html
+++ b/HTML/Map.html
@@ -7,7 +7,7 @@
         <style>
             #map{
                 height: 400px;
-                width: 100%;
+                width: 400px;
             }
         </style>
     </head>
@@ -24,9 +24,9 @@
                 var map = new google.maps.Map(document.getElementById('map'), options);
             }
         </script>
-        <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=​AIzaSyBBsMq43Rsu_XbI4bepexzypZsQH2KlQTs&callback=initMap">
-        </script>
+        <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBsMq43Rsu_XbI4bepexzypZsQH2KlQTs&libraries=places&callback=initMap">
+    </script>
 
     </body>
 </html>
