Login and Sign up buttons lead to those respective pages

--- a/HTML/Login-Form.html
+++ b/HTML/Login-Form.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <button class="login-button1">Login</button>
-    <button class="sign-up-button">Sign Up</button>
+    <button class="login-button1" onclick="window.location.href='Login-Form.html';">Login</button>
+    <button class="sign-up-button" onclick="window.location.href='SignUpForm.html';">Sign Up</button>
 
     <div class="container" id="container">
         
