Connected node js server to mongodb database

--- a/HTML/SignUpForm.html
+++ b/HTML/SignUpForm.html
@@ -28,7 +28,7 @@
         </div>    
 
         <div class="form-container sign-up-container">
-            <form action="" id="sign-up-form" method="POST" enctype="multipart/form-data">
+            <form action="/api/signup" id="sign-up-form" method="POST" enctype="multipart/form-data">
                 <input type="full-name" autocomplete="off" class="full-name" placeholder="Full Name" id="full-name">
                 <span class='user-icon' id="one"></span>
                 <input type="email-address" class="email-address" placeholder="Email Address" id="email-address">
