--- a/HTML/front_page.html
+++ b/HTML/front_page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Itinarary</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="front_page_styles.css">
     <script src="https://kit.fontawesome.com/b8452e11c5.js" crossorigin="anonymous"></script>
 </head>
 <body>
