Added minor changes to some pages

--- a/HTML/More-Info.html
+++ b/HTML/More-Info.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Directory</title>
-	<link rel="stylesheet" type="text/css" href="/css/info.css" />
+	<link rel="stylesheet" type="text/css" href="../CSS/info.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkWZoqmot4KRuIsGlZshMlJ1PV52fOYhk&libraries=places&callback=initMap"
@@ -77,7 +77,7 @@
 		</div>
 	</div>
 
-	<script src="/js/info.js"></script>
+	<script src="../Javascript/info.js"></script>
 </body>
 
 </html>
