--- a/HTML/Recommendations.html
+++ b/HTML/Recommendations.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Directory</title>
-	<link rel="stylesheet" type="text/css" href="/css/recommendations.css" />
+	<link rel="stylesheet" href="../CSS/recommendations.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 	<script
@@ -31,7 +31,7 @@
 		<div id="map"></div>
 
 	</div>
-	<script src="/js/recommendations.js"></script>
+	<script src="../Javascript/recommendations.js"></script>
 </body>
 
 </html>
