--- a/HTML/profile_page.html
+++ b/HTML/profile_page.html
@@ -20,9 +20,8 @@
             <ul>
                 <li><a href="/home.html">Home</a></li>
                 <li><a href="#">Profile</a></li>
-                <li><a href="#">Itinarary</a></li>
-                <li><a href="#">Book Mark</a></li>
-                <li><a href="#">Preferences</a></li>
+                <li><a href="#">Itineraries</a></li>
+                <li><a href="#">Bookmarks</a></li>
             </ul>
         </div>
         
