--- a/HTML/front_page.html
+++ b/HTML/front_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Itinarary</title>
+    <title>Travel Itinerary</title>
     <link rel="stylesheet" href="../CSS/front_page_styles.css">
     <script src="https://kit.fontawesome.com/b8452e11c5.js" crossorigin="anonymous"></script>
 </head>
@@ -18,9 +18,8 @@
             <ul>
                 <li><a href="/home.html">Home</a></li>
                 <li><a href="#">Profile</a></li>
-                <li><a href="#">Itinarary</a></li>
-                <li><a href="#">Book Mark</a></li>
-                <li><a href="#">Preferences</a></li>
+                <li><a href="#">Itineraries</a></li>
+                <li><a href="#">Bookmarks</a></li>
             </ul>
 
         </div>
