--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -21,9 +21,8 @@
             <ul>
                 <li><a href="/home.html">Home</a></li>
                 <li><a href="http://127.0.0.1:5503/index.html">Profile</a></li>
-                <li><a href="#">Itinarary</a></li>
-                <li><a href="#">Bookmark</a></li>
-                <li><a href="#">Preferences</a></li>
+                <li><a href="#">Itineraries</a></li>
+                <li><a href="#">Bookmarks</a></li>
             </ul>
             
         </div>
@@ -47,7 +46,7 @@
     </div>
     <div class="search__wrapper">
         <h1>Hello, Name</h1>
-        <p>Plan your next trip! Never wast a second at your destination.</p>
+        <p>Plan your next trip! Never waste a second at your destination.</p>
         <div class="search__bar">
             <!-- <label for="search" class="search__label">Search</label> -->
             <input type="text" id="autocomplete" placeholder="Where do you want to go.?" class="search__input" data-search>
