--- a/HTML/More-Info.html
+++ b/HTML/More-Info.html
@@ -14,7 +14,8 @@
 
 <body>
 	<div class="containers">
-		<div class="picContainer">
+
+		<!--<div class="picContainer">
 			<div id="info"></div>
 			<div id="image1" class="img">
 				<img src="/assets/images/Refund_back.png" alt="" id="back"
@@ -28,9 +29,54 @@
 			<div class="dots">
 				<div class="dot a1"></div>
 			</div>
+		</div>-->
+
+		<!-- Slideshow container -->
+		<div class="slideshow-container">
+
+			<!-- Full-width images with number and caption text -->
+			<div class="mySlides fade">
+				<div class="numbertext">1 / 3</div>
+				<img src="../Images-Fonts/Refund_back.png" alt="" id="back"
+					style="width: 74px; height: 68px; position: absolute" />
+				<button class="btn_img">View all</button>
+				<img src="../Images-Fonts/tim-hart-MMEryLDqkXY-unsplash 1.png" style="width:100%">
+				<div class="text"></div>
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext">2 / 3</div>
+				<img src="../Images-Fonts/Refund_back.png" alt="" id="back"
+					style="width: 74px; height: 68px; position: absolute" />
+				<button class="btn_img">View all</button>
+				<img src="../Images-Fonts/barcelona 1.png" style="width:100%">
+				<div class="text"></div>
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext">3 / 3</div>
+				<img src="../Images-Fonts/Refund_back.png" alt="" id="back"
+					style="width: 74px; height: 68px; position: absolute" />
+				<button class="btn_img">View all</button>
+				<img src="../Images-Fonts/slider3.jpeg" style="width:100%">
+				<div class="text"></div>
+			</div>
+
+			<!-- Next and previous buttons -->
+			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+			<a class="next" onclick="plusSlides(1)">&#10095;</a>
+		</div>
+		<br>
+
+		<!-- The dots/circles -->
+		<div style="text-align:center">
+			<span class="dot" onclick="currentSlide(1)"></span>
+			<span class="dot" onclick="currentSlide(2)"></span>
+			<span class="dot" onclick="currentSlide(3)"></span>
 		</div>
 
-		<div class="row" style="margin-top: -35px">
+
+		<div class="row show_datas inline_css">
 			<div class="col-md-6">
 				<h1 class="h1_fonts d-flex" style="margin-bottom: -60px">
 					<div id="name">Grand Canyon</div>
@@ -41,7 +87,7 @@
 						<i class="fa fa-star" aria-hidden="true"></i>
 						<i class="fa fa-star" aria-hidden="true"></i>
 						<div id="rating"></div>
-						<button class="btn_set" type="button">View Reviews</button>
+						<button class="btn_set desktop_only" type="button">View Reviews</button>
 					</div>
 				</h1>
 
@@ -61,6 +107,7 @@
 				</h1>
 				<p id="description">
 				</p>
+				<button class="btn_set margin_left_0 mob_only" type="button">View Reviews</button>
 			</div>
 
 			<div class="col-md-6">
