--- a/HTML/Recommendations.html
+++ b/HTML/Recommendations.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Directory</title>
-	<link rel="stylesheet" href="../CSS/recommendations.css" />
+	<link rel="stylesheet" type="text/css" href="../CSS/recommendations.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 	<script
@@ -15,7 +15,7 @@
 
 <body>
 	<div class="container">
-		<img src="/assets/images/barcelona 1.png" class="img-fluid img-margins" alt="" />
+		<img src="../Images-Fonts/barcelona 1.png" class="img-fluid img-margins" alt="" />
 
 		<div class="blue-box">
 			<div class="search">
@@ -25,7 +25,7 @@
 		</div>
 		<h1 class="h1_font">RECOMMENDATIONS FOR YOU</h1>
 
-		<div class="row" id="result" style="margin-top: -35px;">
+		<div class="row inline_css" id="result" style="margin-top: -35px;">
 		</div>
 
 		<div id="map"></div>
