Updated Recommendations with Default Image

--- a/HTML/Recommendations.html
+++ b/HTML/Recommendations.html
@@ -16,7 +16,7 @@
 <body>
 	<form action = '/api/bookmarks' id="recommendations-form">
 	<div class="container">
-		<img src="/assets/images/barcelona 1.png" class="img-fluid img-margins" alt="" />
+		<img src="../Images-Fonts/barcelona 1.png" class="img-fluid img-margins" alt="" />
 
 		<div class="blue-box">
 			<div class="search">
