style/layout changes to profile & home page

--- a/HTML/ItineraryListPage.html
+++ b/HTML/ItineraryListPage.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel profile</title>
 
+    <link rel="stylesheet" href="../CSS/ItineraryListPage.css">
+
+    <script src="https://kit.fontawesome.com/b8452e11c5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="navbar">
+        <div class="logo">
+            <h1>My Itineraries</h1>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="/HTML/home_page.html">Home</a></li>
+                <li><a href="/HTML/profile_page.html">Profile</a></li>
+                <li><a href="/HTML/ItineraryListPage.html"><u>Itineraries</u></a></li>
+                <li><a href="#">Bookmarks</a></li>
+                <li><a href="#">Preferences</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="header-wrapper">
+        <h2>View all itineraries for your upcoming, current, and past trips here.</h2>
+    </div>
+
+    <div class="upcoming-trips">
+        <h3 class="activity__header">My Upcoming Trips</h3>
+        <!-- <div>
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+        </div> -->
+        <div class="activity__img--container">
+            <img src="../Images-Fonts/img12.jpg" class="activity__img" />
+            <img src="../Images-Fonts/img13.jpg"  class="activity__img" />
+          </div> 
+
+    </div>
+
+    <div class="current-trips">
+        <h3 class="activity__header">My Current Trips</h3>
+        <div class="activity__img--container">
+            <img src="../Images-Fonts/img12.jpg" class="activity__img" />
+            <img src="../Images-Fonts/img13.jpg"  class="activity__img" />
+          </div>
+
+    </div>
+
+    <div class="past-trips">
+        <h3 class="activity__header">My Past Trips</h3>
+        <div class="activity__img--container">
+            <img src="../Images-Fonts/img12.jpg" class="activity__img" />
+            <img src="../Images-Fonts/img13.jpg"  class="activity__img" />
+          </div>
+
+    </div>
 
 </body>
 
