--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Itinarary home page</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="../CSS/home_styles.css">
     <script src="https://kit.fontawesome.com/b8452e11c5.js" crossorigin="anonymous"></script>
-    <script src="../Javascript/home_script.js"></script>
+    <!-- <script src="../Javascript/home_script.js"></script>
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrZezY5SmoCl3zPv1pf34KKO0D0Ig9SbA&libraries=places&callback=initAutocomplete" async defer>
-    </script>
+    </script> -->
 </head>
 <body>
     <div class="navbar">
         <div class="logo">
-            <h1>TRAVEL</h1> 
+            <h1>Home</h1> 
 
         </div>
         <div class="menu">
             <ul>
-                <li><a href="/home.html">Home</a></li>
+                <li><a href="/HTML/home_page.html"><u>Home</u></a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Itinarary</a></li>
                 <li><a href="#">Book Mark</a></li>
@@ -30,11 +30,11 @@
         </div>
         <div class="header__wrapper">
             <div class="cols__contain">
-                <div class="left__col">
+                <!-- <div class="left__col">
                     <img src="../Images-fonts/img6.jpg" alt="image" class="img"/>
                     <h2 class="user-name">Name</h2>
                
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -42,10 +42,10 @@
     </div>
     <div class="search__wrapper">
         <h1>Hello, Name</h1>
-        <p>Plan your next trip! Never wast a second at your destination.</p>
+        <p>Plan your next trip! Never waste a second at your destination.</p>
         <div class="search__bar">
             <!-- <label for="search" class="search__label">Search</label> -->
-            <input type="text" id="autocomplete" placeholder="Where do you want to go.?" class="search__input" data-search>
+            <input class="search__input" type="text" id="autocomplete" placeholder="Where do you want to go?" data-search>
 
         </div>
         
