menu for more info page and styling updates

--- a/HTML/ItineraryListPage.html
+++ b/HTML/ItineraryListPage.html
@@ -18,7 +18,7 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="/HTML/Recommendations.html">Home</a></li>
+                <li><a href="/HTML/home_page.html">Home</a></li>
                 <li><a href="/HTML/profile_page.html">Profile</a></li>
                 <li><a href="/HTML/ItineraryListPage.html"><u>Itineraries</u></a></li>
                 <li><a href="">Bookmarks</a></li> <!--Page does not exist yet :(-->
