--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Travel Itinarary home page</title>
+	<title>Wanderlist Home Page</title>
     <link rel="stylesheet" href="../CSS/home_styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://kit.fontawesome.com/b8452e11c5.js" crossorigin="anonymous"></script>
@@ -16,27 +16,24 @@
 <body>
   <div class="navbar">
     <div class="logo">
-        <h1>TRAVEL</h1>
+        <h1>Wanderlist</h1>
 
     </div>
     <div class="menu">
         <ul>
-            <li><a href="/home.html">Home</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Itineraries</a></li>
-            <li><a href="#">Bookmarks</a></li>
+            <li><a href="/HTML/home_page.html"><u>Home</u></a></li>
+            <li><a href="/HTML/profile_page.html">Profile</a></li>
+            <li><a href="/HTML/ItineraryListPage.html">Itineraries</a></li>
+            <li><a href="#">Bookmarks</a></li> <!--Page does not exist yet :(-->
         </ul>
     </div>
-    <div class="left__col">
-      <img src="../Images-Fonts/img6.jpg" alt="image" class="img"/>
-    </div>  
-  </div>
+</div>
 
     <div class="search__wrapper">
         <h1>Hello, Name</h1>
         <p>Plan your next trip! Never waste a second at your destination.</p>
 
-            <input type="text" id="searchTextField" placeholder="Where do you want to go.?" class="search__input" data-search>
+            <input type="text" id="searchTextField" placeholder="Where do you want to go?" class="search__input" data-search>
         
     </div>
 
