style changes for multiple screens

--- a/HTML/profile_page.html
+++ b/HTML/profile_page.html
@@ -15,12 +15,12 @@
     
     <div class="navbar">
         <div class="logo">
-            <h1>Itinerary App</h1>
+            <h1>Wanderlist</h1>
 
         </div>
         <div class="menu">
             <ul>
-                <li><a href="/HTML/Recommendations.html">Home</a></li>
+                <li><a href="/HTML/home_page.html">Home</a></li>
                 <li><a href="/HTML/profile_page.html"><u>Profile</u></a></li>
                 <li><a href="/HTML/ItineraryListPage.html">Itineraries</a></li>
                 <li><a href="#">Bookmarks</a></li> <!--Page does not exist yet :(-->
