Fixed the password check and some syntax

--- a/HTML/front_page.html
+++ b/HTML/front_page.html
@@ -24,10 +24,10 @@
 
         </div>
         <div class="Login">
-            <a href="#">Login</a>
+            <a href="\Login-Form.html">Login</a>
         </div>
         <div class="Signup">
-            <a href="#">Signup</a>
+            <a href="\SignUpForm.html">Signup</a>
 
         </div>
 
