--- a/HTML/profile_page.html
+++ b/HTML/profile_page.html
@@ -64,8 +64,8 @@
     <div class="activity__section">
           <h3 class="activity__header">Recent Activity</h3>
           <div class="activity__img--container">
-            <img src="../Images-Fonts/img12.jpg" class="activity__img" />
-            <img src="../Images-Fonts/img13.jpg"  class="activity__img" />
+            <img src="../Images-Fonts/Dubai.jpg" class="activity__img" />
+            <img src="../Images-Fonts/Italy.webp"  class="activity__img" />
           </div>  
     </div>
     <div class="Preferences">
@@ -76,9 +76,9 @@
             </div>
         </div>
         <div class="activity__img--container">
-          <img src="../Images-Fonts/img12.jpg" class="activity__img" />
-          <img src="../Images-Fonts/img13.jpg"  class="activity__img" />
-          <img src="../Images-Fonts/img13.jpg" class="activity__img" />
+          <img src="../Images-Fonts/Peruu.jpg" class="activity__img" />
+          <img src="../Images-Fonts/resorts.jpg"  class="activity__img" />
+          <img src="../Images-Fonts/toy-story.jpg" class="activity__img" />
         </div>  
     </div>
 
