Minor changes to login form, sign up form, and home page

--- a/HTML/Login-Form.html
+++ b/HTML/Login-Form.html
@@ -35,7 +35,7 @@
             <br>
             <p class="forgotten-password">Forgot your Username <br>and/or Password? <br> <a href="#" style="color: white"><u>Click Here.</u></a></p>
 
-            <button class="login-button2" type="submit" value="Submit Form" >Login</button>
+            <button class="login-button2" type="submit" value="Submit Form" id="login" onclick="window.location.href='home_page.html';">Login</button>
         </div>
         </form>
     </div>
