Changes to home page to allow more search results

--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -61,6 +61,13 @@
         </div>
      </div>    
 
+<!-- 
+     <div class="activity-menu">
+       <button class="tourist-attactions" id="tourist-attractions">Tourist Attractions</button>
+       <button class="hotels" id="hotels">Hotels</button>
+       <button class="restaurants" id="restaurants">Restaurants</button>
+     </div> -->
+
 
      <h2 class="title_rec" id="title_rec"></h2>
 
